fixing overflow text and improving server requests

--- a/www/red-kind-red/src/app/styles/navigation.styles.css
+++ b/www/red-kind-red/src/app/styles/navigation.styles.css
@@ -144,6 +144,7 @@ body {
     /* overflow-y: ; */
     height: 1000px;
     transform: translate3d(-100%, 0, 0);
+    background-color: #b9b9f3;
 }
 
 .closemenu {
