--- a/www/red-kind-red/src/app/styles/publication.styles.css
+++ b/www/red-kind-red/src/app/styles/publication.styles.css
@@ -16,7 +16,7 @@
     margin: 1px;
     padding: 1px;
     font-family: 'Raleway', sans-serif;
-    background-color: rgb(235 235 237);
+    background-color: #cacaef;
     font-size: 20px;
     height: auto;
     width: auto;    
