--- a/www/red-kind-red/src/styles.css
+++ b/www/red-kind-red/src/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: rgb(235 235 237);
+    background-color: #cacaef;
     font-family: 'Raleway', sans-serif 
 }
 
